# rust-chess

./: Book.txt  Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
.github/workflows/: deploy.yml
src/: app.rs  board.rs  bot.rs  constants.rs  evaluation.rs  game_over_screen.rs  main.rs  move_orderer.rs  opening_book.rs  search.rs  square.rs  transposition_table.rs
src/wasm/: app.rs  board.rs  game_over_screen.rs  mod.rs  square.rs
