[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo-console = "0.3.0"
wasm-bindgen = "0.2.87"
yew = { version = "0.20", features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }
chess = "3.2.0"
rand_distr = "0.4.3"
rand = "0.8.5"
web-sys = { version = "0.3.64", features = ["HtmlAudioElement"] }
gloo-timers = "0.3.0"
